tests/rosetta/transpiler/Clojure/a+b.error
run error: exit status 1
Execution error (ClassCastException) at main/main (a+b.clj:8).
class java.lang.String cannot be cast to class java.lang.Character (java.lang.String and java.lang.Character are in module java.base of loader 'bootstrap')

Full report at:
/tmp/clojure-13808746647531951936.edn
